# inertial-navigation-system

./: CMakeLists.txt  a.out  makefile  todo.txt
blueprint/: .~lock.sample_calculation_BMP280.xls#  sample_calculation_BMP280.xls
lib/: DRIVER_BMP280.h  RPIPICO_TOOLS.h  driver_BMP280.c  driver_MPU6050.c
src/: main.c  mpu6050.c
test/: movevalues.c  plot.gpl  test.c
